--- a/app/src/main/res/layout/country_cases_item.xml
+++ b/app/src/main/res/layout/country_cases_item.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardElevation="2dp"
+        app:cardCornerRadius="4dp"
         app:cardUseCompatPadding="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
