--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:queryHint="Search country"
+            android:focusable="false"
             app:iconifiedByDefault="false" />
 
     </androidx.cardview.widget.CardView>
